welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: Unmatched closing brace '}' ignored here
  } else if (getCouleurSol() == Color.green) {
  ^