welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var vert: Boolean = false;
  avance()
  if (estFaceMur) (vert==false)
  } else if (getCouleurSol() == Color.green) {
   vert==true
  } else {
  vert==false
	}
	recule()
	return vert
 }